Fix logo search bar spacing

--- a/src/screens/home.css
+++ b/src/screens/home.css
@@ -1,5 +1,5 @@
-.HomeScreen-content {
-  padding: 30px;
+.HomeScreen-brand {
+  margin: 30px 0;
 }
 
 .HomeScreen-logo {
